# lameo

./: .editorconfig  .gitignore  CMakeLists.txt  LICENSE  MENTAL.md  README.md
include/fmod/: CMakeLists.txt
modsrc/0main/: languages.json  mod.json  script.lua
modsrc/0main/fonts/: main.json
modsrc/0main/levels/: main.json
modsrc/0main/materials/sky/: base.json  clouds.json
modsrc/0main/models/: sky.bbmod
modsrc/0main/scripts/actors/: Camera.lua  Light.lua  Main.lua  Player.lua  PlayerSpawn.lua  Sky.lua
modsrc/0main/scripts/ui/: Pause.lua
modsrc/0main/shaders/: main.fs  main.fsh  main.vs  main.vsh  sky.fs  sky.vs  world.fs  world.vs
src/: L_actor.c  L_actor.h  L_asset.c  L_asset.h  L_audio.c  L_audio.h  L_config.c  L_config.h  L_file.c  L_file.h  L_flags.c  L_flags.h  L_handler.c  L_handler.h  L_input.c  L_input.h  L_internal.c  L_internal.h  L_level.c  L_level.h  L_localize.c  L_localize.h  L_log.c  L_log.h  L_main.c  L_math.c  L_math.h  L_memory.c  L_memory.h  L_mod.c  L_mod.h  L_player.c  L_player.h  L_room.c  L_room.h  L_script.c  L_script.h  L_steam.c  L_steam.h  L_tick.c  (+48 more)
